# askesis.app

./: .dockerignore  .env.example  .gitignore  Dockerfile  PRODUCTION_CHECKLIST.md  README.md  SELF_HOSTING.md  askesis.md  build-android.sh  build-release.sh  deploy.sh  docker-compose.yml  nixpacks.toml  railway.json  run-dev.sh
.github/workflows/: android-release.yml  ci.yml
analysis/: README.md  pyproject.toml
analysis/askesis/: __init__.py  db.py  viz.py
analysis/notebooks/: exploration.ipynb
backend/: .env.example  MIGRATIONS.md  alembic.ini  common_foods.json  db.sh  railway.json  requirements.txt  seed_data.py  seed_demo_data.py  seed_foods.py  seed_weekly_demo.py  start.sh
backend/app/: config.py  database.py  encryption.py  food_search.py  google_drive.py  google_sheets.py  main.py  models.py  scheduler.py  units.py
backend/app/routers/: activities.py  auth.py  daily_log.py  export.py  import_router.py  measurements.py  nutrition.py  photos.py  report.py  settings.py  sharing.py  sync.py  training.py
backend/migrations/: env.py
backend/migrations/versions/: 20260302_1651_c01286a36ee9_initial_schema.py  20260303_2200_944cdba064bf_add_activity_fields_and_color_scheme.py  20260303_2230_c92f92ae7150_add_unit_preferences.py  20260310_0001_add_google_drive_support.py  20260310_0002_add_drive_folder_to_settings.py  (+14 more)
backend/scripts/: restore_backup.py
docs/: RELEASE.md
frontend/: .env.example  package-lock.json  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: app.css  app.html
tailscale/: serve.json
(+51 files in other folders)
