[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "askesis"
version = "0.1.0"
description = "Analysis tools for Askesis health tracking data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0",
    "ipykernel>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["askesis"]
